Core tarafindan uretilen kodun yazdigi tablolari ve onlarin column'larini frontend'e donebilmek icin endpoint'ler eklendi. Spark context'i ile gerceklesen isler kaldirildi. Ornek unit test eklendi.